--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
 
 <meta name="author" content="Yan Zhang">
-<meta name="description" content="Personal math &amp; programming blog">
+<meta name="description" content="Personal blogs on science, math, and coding">
 <meta name="keywords" content="">
 
 
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Yan Zhang">
-  <meta name="twitter:description" content="Personal math &amp; programming blog">
+  <meta name="twitter:description" content="Personal blogs on science, math, and coding">
 
 <meta property="og:url" content="https://yaz62.github.io/">
   <meta property="og:site_name" content="Yan Zhang">
   <meta property="og:title" content="Yan Zhang">
-  <meta property="og:description" content="Personal math &amp; programming blog">
+  <meta property="og:description" content="Personal blogs on science, math, and coding">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
@@ -114,7 +114,7 @@
 
     <h1>Yan Zhang</h1>
 
-<h2>Math, Code, Curiosity</h2>
+<h2>Bits of Science, Math, Code, In That Order</h2>
 
 
 
