--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <title>Yan Zhang</title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
   <meta name="twitter:title" content="Yan Zhang">
   <meta name="twitter:description" content="Personal blogs on science, math, and coding">
 
-<meta property="og:url" content="http://localhost:1313/">
+<meta property="og:url" content="https://yaz62.github.io/">
   <meta property="og:site_name" content="Yan Zhang">
   <meta property="og:title" content="Yan Zhang">
   <meta property="og:description" content="Personal blogs on science, math, and coding">
@@ -30,7 +30,7 @@
 
 
 
-<link rel="canonical" href="http://localhost:1313/">
+<link rel="canonical" href="https://yaz62.github.io/">
 
 
 <link rel="preload" href="/fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
@@ -40,7 +40,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/coder.css" media="screen">
+  <link rel="stylesheet" href="/css/coder.min.6445a802b9389c9660e1b07b724dcf5718b1065ed2d71b4eeaf981cc7cc5fc46.css" integrity="sha256-ZEWoArk4nJZg4bB7ck3PVxixBl7S1xtO6vmBzHzF/EY=" crossorigin="anonymous" media="screen" />
 
 
 
@@ -126,7 +126,7 @@ window.MathJax = {
     <nav class="navigation">
   <section class="container">
     
-    <a class="navigation-title" href="http://localhost:1313/">
+    <a class="navigation-title" href="https://yaz62.github.io/">
       Yan Zhang
     </a>
     
@@ -195,7 +195,7 @@ window.MathJax = {
 
   
   
-  <script src="/js/coder.js"></script>
+  <script src="/js/coder.min.6ae284be93d2d19dad1f02b0039508d9aab3180a12a06dcc71b0b0ef7825a317.js" integrity="sha256-auKEvpPS0Z2tHwKwA5UI2aqzGAoSoG3McbCw73gloxc="></script>
   
 
   
