--- a/404.html
+++ b/404.html
@@ -50,6 +50,11 @@
 
 
  
+  
+    
+    <link rel="stylesheet" href="/css/custom.min.e4604e665cf090b495be25726aeae56b952fcb685559f3ebaeacceb33fa204b2.css" integrity="sha256-5GBOZlzwkLSVviVyaurla5Uvy2hVWfPrrqzOsz&#43;iBLI=" crossorigin="anonymous" media="screen" />
+  
+
 
 
 
@@ -85,6 +90,8 @@ window.MathJax = {
 };
 </script>
 <script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/academicons/css/academicons.min.css">
 
 
 <script>
